--- a/pom.xml
+++ b/pom.xml
@@ -35,10 +35,10 @@
 							<groupId>org.codehaus.groovy</groupId>
 							<artifactId>groovy-jsr223</artifactId>
 						</sharedLibrary>
-					    <sharedLibrary>
-					        <groupId>org.python</groupId>
-					        <artifactId>jython-standalone</artifactId>
-					    </sharedLibrary>
+						<sharedLibrary>
+							<groupId>org.python</groupId>
+							<artifactId>jython-standalone</artifactId>
+						</sharedLibrary>
 					</sharedLibraries>
 					<cloudHubDeployment>
 						<uri>https://anypoint.mulesoft.com</uri>
@@ -62,6 +62,7 @@
 				<version>3.10.1</version>
 				<configuration>
 					<compilerArgs>
+						<arg>-parameters</arg>
 						<args>-parameters</args>
 					</compilerArgs>
 					<target>1.8</target>
@@ -107,10 +108,10 @@
 			<version>3.0.19</version>
 		</dependency>
 		<dependency>
-		    <groupId>org.python</groupId>
-		    <artifactId>jython-standalone</artifactId>
-		    <version>2.7.2</version>
-		</dependency>		
+			<groupId>org.python</groupId>
+			<artifactId>jython-standalone</artifactId>
+			<version>2.7.2</version>
+		</dependency>
 	</dependencies>
 
 	<repositories>
